--- a/Swimmer_seller/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/Swimmer_seller/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -12,10 +12,18 @@
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_item_home_to_item_product_add"
-            app:destination="@id/item_product_add" />
+            app:destination="@id/item_product_add"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/action_item_home_to_item_guide"
-            app:destination="@id/item_guide" />
+            app:destination="@id/item_guide"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
 
     <fragment
@@ -25,7 +33,11 @@
         tools:layout="@layout/fragment_product_add" >
         <action
             android:id="@+id/action_item_product_add_to_item_product_option"
-            app:destination="@id/item_product_option" />
+            app:destination="@id/item_product_option"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/item_product_option"
@@ -58,13 +70,25 @@
         tools:layout="@layout/fragment_menu" >
         <action
             android:id="@+id/action_item_menu_to_item_product_add"
-            app:destination="@id/item_product_add" />
+            app:destination="@id/item_product_add"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/action_item_menu_to_item_manage_order"
-            app:destination="@id/item_manage_order" />
+            app:destination="@id/item_manage_order"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/action_item_menu_to_item_product_list"
-            app:destination="@id/item_product_list" />
+            app:destination="@id/item_product_list"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
 
     <fragment
@@ -74,7 +98,11 @@
         tools:layout="@layout/fragment_order_manage" >
         <action
             android:id="@+id/action_item_manage_order_to_item_order_detail"
-            app:destination="@id/item_order_detail" />
+            app:destination="@id/item_order_detail"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/item_order_detail"
@@ -93,7 +121,11 @@
         tools:layout="@layout/fragment_product_list">
         <action
             android:id="@+id/action_item_product_list_to_item_product_detail"
-            app:destination="@id/item_product_detail" />
+            app:destination="@id/item_product_detail"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/item_product_detail"
