--- a/Swimmer_customer/app/src/main/res/layout/fragment_mypage.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_mypage.xml
@@ -35,12 +35,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/border_layout"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imageViewProfilePhoto"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     app:srcCompat="@drawable/broken_image_24px" />
 
                 <LinearLayout
