refactor: 주문목록 -> 주문상세 객체 전달

--- a/Swimmer_customer/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/Swimmer_customer/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -291,9 +291,8 @@
         android:label="fragment_order_detail"
         tools:layout="@layout/fragment_order_detail" >
         <argument
-            android:name="orderIdx"
-            app:argType="integer"
-            android:defaultValue="-1" />
+            android:name="order"
+            app:argType="com.petpal.swimmer_customer.data.model.Order" />
     </fragment>
 
 </navigation>
