feat : 긴 화면들 FAB 배치

--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_detail.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_detail.xml
@@ -35,7 +35,7 @@
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsingToolbarMain"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <!-- 상품 기본 정보 -->
@@ -182,36 +182,43 @@
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:overScrollMode="never"
                 app:tabGravity="fill"
                 app:tabMode="fixed"
                 app:layout_collapseMode="pin" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.core.widget.NestedScrollView
-            android:id="@+id/nestedScrollView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
-            <!-- 상품상세, 상품리뷰, 상품QnA -->
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/viewPagerContent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                />
-
-        </androidx.core.widget.NestedScrollView>
-
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fabProductDetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            android:src="@drawable/arrow_upward_24px"
-            app:fabSize="mini"/>
+            android:layout_margin="20dp"
+            android:src="@drawable/arrow_upward_24px" />
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/nestedScrollViewContent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            <!--app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"-->
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <!-- 상품상세, 상품리뷰, 상품QnA -->
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/viewPagerContent"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:nestedScrollingEnabled="true" />
+
+            </LinearLayout>
+
+        </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </LinearLayout>
